--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1675,138 +1675,138 @@ cards:
 
 ############################################################################################################################## 
 
-# nations only
+# # nations only
 
-  - heading: Latest vaccination uptake, by vaccination date
-    cardType: tabContentRaw
-    locationAware:
-      included: 
-        areaName:
-          - England
-          - Scotland
+#   - heading: Latest vaccination uptake, by vaccination date
+#     cardType: tabContentRaw
+#     locationAware:
+#       included: 
+#         areaName:
+#           - England
+#           - Scotland
 
-    fullWidth: false
-    abstract: >
-      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
-      by dose, up to the latest day on which vaccine data were reported.
-      Daily figures include all vaccines that were given up to and including the date shown.
-      For England, only people aged 18 and over who have an NHS number and are currently alive are included. 
-      The denominator used is the number of people on the National Immunisation Management Service (NIMS) database.
-      For Scotland, the denominator used is the mid-2019 population estimate,
-      published by National Records of Scotland. For this reason, comparisons should be made with caution.
-      Therefore the percentages will not match the uptake by report date.
+#     fullWidth: false
+#     abstract: >
+#       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+#       by dose, up to the latest day on which vaccine data were reported.
+#       Daily figures include all vaccines that were given up to and including the date shown.
+#       For England, only people aged 18 and over who have an NHS number and are currently alive are included. 
+#       The denominator used is the number of people on the National Immunisation Management Service (NIMS) database.
+#       For Scotland, the denominator used is the mid-2019 population estimate,
+#       published by National Records of Scotland. For this reason, comparisons should be made with caution.
+#       Therefore the percentages will not match the uptake by report date.
     
-    download:
-      - cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-      - cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+#     download:
+#       - cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+#       - cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
     
-    tabs: 
-      - heading: Uptake
-        tabType: percentageWaffle
+#     tabs: 
+#       - heading: Uptake
+#         tabType: percentageWaffle
 
-        fields:
-          - label: 1st dose (%)
-            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
-            colour: 0
+#         fields:
+#           - label: 1st dose (%)
+#             value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+#             tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
+#             colour: 0
           
-          - label: 2nd dose (%)
-            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
-            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
-            colour: 3
+#           - label: 2nd dose (%)
+#             value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+#             tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
+#             colour: 3
           
-      - heading: Data
-        tabType: table
+#       - heading: Data
+#         tabType: table
       
-        fields:
-          - label: Vaccination date
-            value: date
-            type: date
-            tooltip: Date
+#         fields:
+#           - label: Vaccination date
+#             value: date
+#             type: date
+#             tooltip: Date
 
-          - label: "1st dose (%)"
-            value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-            type: numeric
-            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
+#           - label: "1st dose (%)"
+#             value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+#             type: numeric
+#             tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
 
-          - label: "2nd dose (%)"
-            value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
-            type: numeric
-            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
+#           - label: "2nd dose (%)"
+#             value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+#             type: numeric
+#             tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+#       - heading: About 
+#         tabType: metadata
+#         filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
 
-############################################################################################################################# 
+# ############################################################################################################################# 
 
-# nation only
+# # nation only
 
-  - heading: Vaccination uptake, by vaccination date
-    cardType: chart
-    locationAware:
-      included: 
-        areaName:
-          - England
-          - Scotland
+#   - heading: Vaccination uptake, by vaccination date
+#     cardType: chart
+#     locationAware:
+#       included: 
+#         areaName:
+#           - England
+#           - Scotland
 
-    fullWidth: false
-    abstract: >
-      Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
-      shown by vaccination date.
-      Daily figures include all vaccines that were given up to and including the date shown.
-      For England, only people aged 18 and over who have an NHS number and are currently alive are included. 
-      The denominator used is the number of people on the National Immunisation Management Service (NIMS) database.
-      For Scotland, the denominator used is the mid-2019 population estimate,
-      published by National Records of Scotland. For this reason, comparisons should be made with caution.
-      Therefore the percentages will not match the uptake by report date.
-      Percentages lower than 0.1 will not appear on the chart and show as N/A in data tables.
+#     fullWidth: false
+#     abstract: >
+#       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
+#       shown by vaccination date.
+#       Daily figures include all vaccines that were given up to and including the date shown.
+#       For England, only people aged 18 and over who have an NHS number and are currently alive are included. 
+#       The denominator used is the number of people on the National Immunisation Management Service (NIMS) database.
+#       For Scotland, the denominator used is the mid-2019 population estimate,
+#       published by National Records of Scotland. For this reason, comparisons should be made with caution.
+#       Therefore the percentages will not match the uptake by report date.
+#       Percentages lower than 0.1 will not appear on the chart and show as N/A in data tables.
     
-    download:
-      - cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-      - cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+#     download:
+#       - cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+#       - cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
   
-    tabs: 
+#     tabs: 
 
-      - heading: Uptake
-        tabType: chart
+#       - heading: Uptake
+#         tabType: chart
        
-        fields:
-            - label: 1st dose (%)
-              value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-              tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
-              type: line
-              colour: 0
-              rollingAverage: false
-            - label: 2nd dose (%)
-              value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
-              tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
-              type: line
-              colour: 3
-              rollingAverage: false
+#         fields:
+#             - label: 1st dose (%)
+#               value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+#               tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
+#               type: line
+#               colour: 0
+#               rollingAverage: false
+#             - label: 2nd dose (%)
+#               value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+#               tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
+#               type: line
+#               colour: 3
+#               rollingAverage: false
            
-      - heading: Data
-        tabType: table
+#       - heading: Data
+#         tabType: table
         
-        fields:
-            - label: Vaccination date
-              value: date
-              type: date
-              tooltip: Date
+#         fields:
+#             - label: Vaccination date
+#               value: date
+#               type: date
+#               tooltip: Date
 
-            - label: "1st dose (%)"
-              value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
-              type: numeric
-              tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
+#             - label: "1st dose (%)"
+#               value: cumVaccinationFirstDoseUptakeByVaccinationDatePercentage
+#               type: numeric
+#               tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
 
-            - label: "2nd dose (%)"
-              value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
-              type: numeric
-              tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine             
+#             - label: "2nd dose (%)"
+#               value: cumVaccinationSecondDoseUptakeByVaccinationDatePercentage
+#               type: numeric
+#               tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine             
 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
+#       - heading: About 
+#         tabType: metadata
+#         filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
 
 ############################################################################################################################# 
 ############################################################################################################################# 
