--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1566,6 +1566,11 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
+              highlight: 
+                from: -2
+                to: 0
+                colour: 6
+                label: "Most recent 2 days (incomplete)"
 
             - label: Vaccinations (7-day average)
               value: newPeopleVaccinatedFirstDoseByVaccinationDate
@@ -1575,7 +1580,7 @@ cards:
               fill: false
               rollingAverage:
                 window: 7
-                clipEnd: 0 #no of days to exclude for incomplete data
+                clipEnd: 2 #no of days to exclude for incomplete data
            
         - heading: Cumulative
           tabType: chart
@@ -2108,6 +2113,14 @@ cards:
 
   - heading: Vaccination uptake by area
     cardType: simpleTableStatic
+    locationAware:
+      excluded: 
+        areaName:
+        - Wales
+        - Northern Ireland
+        areaType:
+        - overview
+
     fullWidth: false
     abstract: >
       Total percentage of people aged 18 and over who have received a COVID-19 vaccination, 
