updated area type for vacc table

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2152,6 +2152,10 @@ cards:
         - region
         - utla
         - ltla
+        - nation
+        areaName:
+        - England
+        - Scotland
 
     fullWidth: false
     abstract: >
